correcting swagger
